# Lessons_15

./: pyproject.toml
Lessons_15_1/: main_15_1.py  other.py  Наследование в Python.py  Функции issubclass и isinstance.py  Функция super.py
Lessons_15_2/: main_15_2.py  main_15_2_1.py  try.py  Абстрактные классы.py  Коллекции __slots__.py  Множественное наследование и MRO.py
Lessons_15_2/tasks/: main_01.py  main_02.py  main_03.py  main_04.py  main_05.py  readme_1.md  readme_2.md  readme_3.md  readme_4.md  readme_5.md
